--- a/storybook-static/css/ui-tailwind.css
+++ b/storybook-static/css/ui-tailwind.css
@@ -7,6 +7,14 @@
   mask-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='currentColor'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e");
 }
 
+.ui-check-box:checked::before {
+  content: '';
+  width: 0.65em;
+  height: 0.65em;
+  box-shadow: inset 1em 1em #6c62e1;
+  clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+}
+
 body {
   font-family: 'Epilogue';
   font-style: normal;
